# solana-stablecoin-standard

./: .dockerignore  .env.example  .env.test  .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT.md  README.md  SUBMISSION.md  Trident.toml  WINDOWS_DEV.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.github/workflows/: anchor-test.yml  ci.yml  full-ci.yml  ts-tests.yml
cli/: package.json  tsup.config.ts  vitest.config.ts
cli/src/: commands.ts  config.ts  index.ts  logger.ts  utils.ts
cli/tests/: commands.test.ts
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  OPERATIONS.md  ORACLE.md  SDK.md  SECURITY.md  SSS-1.md  SSS-2.md  SSS-3.md
evidence/logs/: anchor-test.txt  cargo-test-final.txt  cargo-test-v2.txt  cargo-test.txt  cli-blacklist-help.txt  cli-minters-help.txt  cli-test.txt  devnet-hook.txt  devnet-sss-token.txt  docker-ps.txt  docker-up.txt  fuzz-sss2.txt  health-checks.txt  sdk-vitest-final.txt  sdk-vitest-v2.txt  sdk-vitest.txt  security-tests-final.txt  security-tests.txt  tsc-cli.txt  tsc-webhook.txt
examples/: custom-config.toml
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
programs/oracle-module/: Cargo.toml  Xargo.toml
programs/oracle-module/src/: errors.rs  lib.rs  state.rs
programs/sss-token/: Cargo.toml
programs/sss-token/src/: constants.rs  errors.rs  lib.rs
programs/sss-token/src/instructions/: allowlist.rs  burn.rs  compliance.rs  confidential.rs  freeze.rs  initialize.rs  mint.rs  mod.rs  pause.rs  roles.rs  seize.rs
programs/sss-token/src/state/: allowlist_entry.rs  blacklist_entry.rs  minter_quota.rs  mod.rs  pause_state.rs  role_record.rs  stablecoin_config.rs
programs/sss-token/tests/: test_config.rs  test_errors.rs  test_instructions_unit.rs  test_state.rs
programs/transfer-hook/: Cargo.toml
scripts/: deploy-devnet.sh  deploy.sh  run-tests.ps1  setup-test-env.ps1  verify-deployment.sh  verify-devnet.js  verify-devnet.ts  verify-ids.sh
sdk/: package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
sdk/src/: client.ts  errors.ts  idl.json  index.ts  pda.ts  types.ts
sdk/tests/: client.test.ts  compliance.test.ts  errors.test.ts  integration.test.ts  oracle.test.ts  pda.test.ts  presets.test.ts  sss3.test.ts  types.test.ts
services/compliance-service/: Dockerfile  package.json
services/indexer/: Dockerfile  package.json
services/mint-service/: Dockerfile  package.json
services/oracle-service/: README.md  package.json
services/shared/: package.json
services/webhook-service/: Dockerfile  package.json  (+1 more)
tests/: sss-token.ts
tui/: package.json
(+35 files in other folders)
