[workspace]
members = [
    "programs/sss-token",
    "programs/transfer-hook",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "0.30", features = ["init-if-needed"] }
anchor-spl = { version = "0.30", features = ["token_2022", "associated_token"] }
spl-token-2022 = { version = "3.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.6"
spl-tlv-account-resolution = "0.6"

[patch.crates-io]
anchor-syn = { path = "patches/anchor-syn" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
