[package]
name = "oracle-module"
version = "0.1.0"
description = "Oracle integration module for SSS stablecoin price-gated minting"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oracle_module"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
