[package]
name = "oracle-module"
version = "0.1.0"
description = "Oracle integration module for SSS stablecoin price-gated minting"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oracle_module"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }

# Prevent Edition 2024 transitive upgrades during SBF compile
blake3 = "=1.5.0"
toml_edit = "=0.21.1"
toml_datetime = "=0.6.6"
bytemuck_derive = "=1.8.1"
constant_time_eq = "=0.3.1"
getrandom = "=0.2.14"

[lints]
workspace = true
