[package]
name = "sss-token"
version = "0.1.0"
description = "Solana Stablecoin Standard — Core Token Program"
edition = "2021"
rust-version = "1.72.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-token-2022 = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
# Prevent Edition 2024 transitive upgrades during SBF compile
blake3 = "=1.5.0"
toml_edit = "=0.21.1"
toml_datetime = "=0.6.6"
bytemuck_derive = "=1.8.1"
constant_time_eq = "=0.3.1"
getrandom = "=0.2.14"

[lints]
workspace = true
